Fix dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -88,16 +88,23 @@ a:hover {
 	}
 }
 
-@media (prefers-color-scheme: light) {
-	body {
-		color: var(--black);
-		background: var(--white);
-	}
-}
-
 @media (prefers-color-scheme: dark) {
 	body {
 		color: var(--white);
 		background: var(--black);
+	}
+
+	h2 {
+		color: var(--black);
+		background: var(--white);
+	}
+
+	a {
+		color: var(--white);
+	}
+
+	a:hover {
+		color: var(--black);
+		background: var(--white);
 	}
 }
